fix z-index

--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;900&display=swap');
 :root {
   --primary-color: #ffd11a;
-  --primary-light-color:#ffe680;
   --second-color:  #ff33ff;
   --third-color: #00fdfd;
   --gray-color: #f2f2f2;
-  --background-song-color:  linear-gradient(45deg,#ffe680,#ffb3ff,#ffe680,#ffb3ff);
+  --background-song-color:  linear-gradient(-45deg,#ffe680,#ffb3ff,#ffe680,#ffb3ff);
   --text-color: #333;
 }
 
@@ -118,18 +117,15 @@ header h2 {
 }
 
 .cd-thumb-inner-1 {
-  --width: 45px;
-  width: var(--width);
-  height: var(--width);
+  width: 0;
+  height: 0;
   background-color: rgba(255,255,255,0.35);
   border: 1px solid var(--primary-color);
-  z-index: 5;
 }
 
 .cd-thumb-inner-2 {
-  --width: 30px;
-  width: var(--width);
-  height: var(--width);
+  width: 0;
+  height: 0;
   background-color: #fff;
   border: 1px solid transparent;
   border: 1px solid #333;
@@ -357,6 +353,7 @@ header h2 {
 .song .body {
   flex: 1;
   padding: 0 16px;
+  z-index: 10;
 }
 
 .song .title {
